# ctf-practice

./: .gitignore  .ruff.toml  README.md  mypy.ini  pyproject.toml
src/: utils.py
src/courses/: beginner.py  modular_arithmetic.py
